fixed cloud covering the search current location

--- a/src/Components/app/App.scss
+++ b/src/Components/app/App.scss
@@ -72,6 +72,8 @@ body{
     background: #fff;
     padding: 15px 20px;
     border-radius: 20px;
+    position: relative;
+    z-index: 10;
     @media (max-width:1220px) {
         font-size: 25px;
         position: absolute;
